# PythonRemoteAndroidSDKController-

./: README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
remote_controller/: __init__.py
remote_controller/adapters/bluetooth/: bluetooth_device.py  bluetooth_profile.py
remote_controller/controllers/: appium_controller.py
remote_controller/shells/: android_shell.py  appium_shell.py  shell.py
src/remote_controller/adapters/bluetooth/: bluetooth_adapter.py  bluetooth_class.py  bluetooth_device.py
src/remote_controller/controllers/: remote_controller.py
src/remote_controller/shells/: android_shell.py  shell.py
src/remote_controller/utils/: logger.py
tests/: appium_bluetooth_tests.py  bluetooth_tests.py  main.py
