[metadata]
name = sdk-remote-controller
author = Dmytro Frolov
author_email = frolovdmytiy27@gmail.com
version = 0.0.1
description = Library for executing android sdk methods throw the shell
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = android, sdk, remote
license = MIT
home_page = https://github.com/FruNoman/PythonRemoteAndroidSDKController
project_urls =
    Issue Tracker = https://github.com/FruNoman/PythonRemoteAndroidSDKController/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = true
install_requires =
    setuptools
    importlib_resources


[options.packages.find]
where = src

[options.package_data]
* = *.txt, *.rst, *.apk

[bdist_wheel]
universal = 1